experiments/16/b0bf6ea47d707213f3389c0ca6401aa4c6e95d/error
MESSAGE: Execution of "sudo -u lctt-runner ./build_llvm_project_stage1.sh" failed

STDOUT:
[398/2640] Copying clang's sm4intrin.h...
[399/2640] Copying clang's tbmintrin.h...
[400/2640] Copying clang's tmmintrin.h...
[401/2640] Copying clang's tsxldtrkintrin.h...
[402/2640] Copying clang's uintrintrin.h...
[403/2640] Copying clang's smmintrin.h...
[404/2640] Copying clang's usermsrintrin.h...
[405/2640] Copying clang's vaesintrin.h...
[406/2640] Copying clang's vecintrin.h...
[407/2640] Copying clang's velintrin.h...
[408/2640] Copying clang's velintrin_approx.h...
[409/2640] Copying clang's velintrin_gen.h...
[410/2640] Copying clang's waitpkgintrin.h...
[411/2640] Copying clang's vpclmulqdqintrin.h...
[412/2640] Copying clang's wasm_simd128.h...
[413/2640] Copying clang's wmmintrin.h...
[414/2640] Copying clang's wbnoinvdintrin.h...
[415/2640] Copying clang's x86intrin.h...
[416/2640] Copying clang's x86gprintrin.h...
[417/2640] Copying clang's xmmintrin.h...
[418/2640] Copying clang's xopintrin.h...
[419/2640] Copying clang's xsaveintrin.h...
[420/2640] Copying clang's xsavesintrin.h...
[421/2640] Copying clang's xsaveoptintrin.h...
[422/2640] Copying clang's xtestintrin.h...
[423/2640] Copying clang's xsavecintrin.h...
[424/2640] Building CXX object tools/clang/lib/Support/CMakeFiles/obj.clangSupport.dir/RISCVVIntrinsicUtils.cpp.o
[425/2640] Copying clang's __stdarg___gnuc_va_list.h...
[426/2640] Copying clang's __stdarg___va_copy.h...
[427/2640] Copying clang's __stdarg_va_arg.h...
[428/2640] Copying clang's __stdarg_va_copy.h...
[429/2640] Copying clang's __stdarg_va_list.h...
[430/2640] Copying clang's __stddef_null.h...
[431/2640] Copying clang's __stddef_size_t.h...
[432/2640] Copying clang's __stddef_max_align_t.h...
[433/2640] Copying clang's __stddef_nullptr_t.h...
[434/2640] Copying clang's __stddef_offsetof.h...
[435/2640] Copying clang's __stddef_ptrdiff_t.h...
[436/2640] Copying clang's __stddef_rsize_t.h...
[437/2640] Copying clang's __stddef_wchar_t.h...
[438/2640] Copying clang's __stddef_unreachable.h...
[439/2640] Copying clang's __stddef_wint_t.h...
[440/2640] Copying clang's float.h...
[441/2640] Copying clang's hlsl/hlsl_basic_types.h...
[442/2640] Copying clang's hlsl/hlsl_intrinsics.h...
[443/2640] Copying clang's iso646.h...
[444/2640] Copying clang's inttypes.h...
[445/2640] Copying clang's limits.h...
[446/2640] Copying clang's llvm_libc_wrappers/ctype.h...
[447/2640] Copying clang's llvm_libc_wrappers/inttypes.h...
[448/2640] Copying clang's llvm_libc_wrappers/stdio.h...
[449/2640] Copying clang's llvm_libc_wrappers/stdlib.h...
[450/2640] Copying clang's llvm_libc_wrappers/string.h...
[451/2640] Copying clang's llvm_libc_wrappers/time.h...
[452/2640] Copying clang's module.modulemap...
[453/2640] Copying clang's opencl-c-base.h...
[454/2640] Copying clang's openmp_wrappers/__clang_openmp_device_functions.h...
[455/2640] Copying clang's openmp_wrappers/cmath...
[456/2640] Copying clang's openmp_wrappers/complex...
[457/2640] Copying clang's openmp_wrappers/complex.h...
[458/2640] Copying clang's stdarg.h...
[459/2640] Copying clang's openmp_wrappers/new...
[460/2640] Copying clang's openmp_wrappers/complex_cmath.h...
[461/2640] Copying clang's stdalign.h...
[462/2640] Copying clang's stddef.h...
[463/2640] Copying clang's stdatomic.h...
[464/2640] Copying clang's stdckdint.h...
[465/2640] Copying clang's stdbool.h...
[466/2640] Copying clang's stdint.h...
[467/2640] Copying clang's stdnoreturn.h...
[468/2640] Copying clang's tgmath.h...
[469/2640] Copying clang's vadefs.h...
[470/2640] Copying clang's unwind.h...
[471/2640] Copying clang's varargs.h...
[472/2640] Building CXX object lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o
FAILED: lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++ -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -I/tmp/llvm-project-build-stage1/lib/Support -I/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support -I/tmp/llvm-project-build-stage1/include -I/var/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fno-semantic-interposition -fvisibility-inlines-hidden -Werror=date-time -fno-lifetime-dse -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-nonnull -Wno-class-memaccess -Wno-redundant-move -Wno-pessimizing-move -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wsuggest-override -Wno-comment -Wno-misleading-indentation -Wctad-maybe-unsupported -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG -std=c++17  -fno-exceptions -funwind-tables -fno-rtti -MD -MT lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o -MF lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o.d -o lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o -c /var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp: In member function ‘llvm::StringRef::size_type llvm::StringRef::find_last_of(llvm::StringRef, size_t) const’:
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:279:5: error: ‘__m128i’ was not declared in this scope
  279 |     __m128i Needle0 = _mm_set1_epi8(Chars[0]);
      |     ^~~~~~~
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:280:12: error: expected ‘;’ before ‘Needle1’
  280 |     __m128i Needle1 = _mm_set1_epi8(Chars[1]);
      |            ^~~~~~~~
      |            ;
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:284:14: error: expected ‘;’ before ‘Buffer’
  284 |       __m128i Buffer = _mm_loadu_si128((__m128i *)(Data() + sz));
      |              ^~~~~~~
      |              ;
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:286:26: error: ‘Buffer’ was not declared in this scope; did you mean ‘setbuffer’?
  286 |           _mm_cmpeq_epi8(Buffer, Needle0), _mm_cmpeq_epi8(Buffer, Needle1)));
      |                          ^~~~~~
      |                          setbuffer
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:286:34: error: ‘Needle0’ was not declared in this scope
  286 |           _mm_cmpeq_epi8(Buffer, Needle0), _mm_cmpeq_epi8(Buffer, Needle1)));
      |                                  ^~~~~~~
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:286:11: error: ‘_mm_cmpeq_epi8’ was not declared in this scope
  286 |           _mm_cmpeq_epi8(Buffer, Needle0), _mm_cmpeq_epi8(Buffer, Needle1)));
      |           ^~~~~~~~~~~~~~
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:286:67: error: ‘Needle1’ was not declared in this scope
  286 |           _mm_cmpeq_epi8(Buffer, Needle0), _mm_cmpeq_epi8(Buffer, Needle1)));
      |                                                                   ^~~~~~~
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:285:36: error: ‘_mm_or_si128’ was not declared in this scope
  285 |       int Mask = _mm_movemask_epi8(_mm_or_si128(
      |                                    ^~~~~~~~~~~~
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:285:18: error: ‘_mm_movemask_epi8’ was not declared in this scope
  285 |       int Mask = _mm_movemask_epi8(_mm_or_si128(
      |                  ^~~~~~~~~~~~~~~~~
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:290:14: error: ‘sz’ was not declared in this scope; did you mean ‘Sz’?
  290 |     } while (sz);
      |              ^~
      |              Sz
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:291:12: error: ‘npso’ was not declared in this scope; did you mean ‘npos’?
  291 |     return npso;
      |            ^~~~
      |            npos
In file included from /var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/Support/MathExtras.h:16,
                 from /var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/APInt.h:19,
                 from /var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/APFloat.h:18,
                 from /var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:10:
/var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/bit.h: In instantiation of ‘int llvm::countl_zero(T) [with T = int]’:
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:288:64:   required from here
/var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/bit.h:281:22: error: static assertion failed: Only unsigned integral types are allowed.
  281 |   static_assert(std::is_unsigned_v<T>,
      |                 ~~~~~^~~~~~~~~~~~~~~~
/var/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/ADT/bit.h:281:22: note: ‘std::is_unsigned_v<int>’ evaluates to false
ninja: build stopped: subcommand failed.


STDERR:
Command exited with non-zero status 1
1.53user 0.72system 0:00.46elapsed 483%CPU (0avgtext+0avgdata 131568maxresident)k
0inputs+61680outputs (140major+330476minor)pagefaults 0swaps
